refactor: mejorar estética visual con CSS temático de LoL
- Tema oscuro elegante con gradientes y dorados
- Estilos para títulos, tabla, biografía, botones e imágenes
- Hover en botones y selección en tabla
- Sombra suave en imágenes para profundidad